// Code generated - DO NOT EDIT.
// This file is a generated protobuf definition and any manual changes will be lost.

syntax = "proto3";
package WooPPV4;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nakji-network/woofi-connectors/woofi/WooPPV4";

message AdminUpdated {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes addr = 5;
	bool flag = 6;
	bytes contractAddress = 7;
	bytes senderAddress = 8;
	bytes receiverAddress = 9;
}

message FeeAddrUpdated {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes newFeeAddr = 5;
	bytes contractAddress = 6;
	bytes senderAddress = 7;
	bytes receiverAddress = 8;
}

message Paused {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes account = 5;
	bytes contractAddress = 6;
	bytes senderAddress = 7;
	bytes receiverAddress = 8;
}

message Unpaused {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes account = 5;
	bytes contractAddress = 6;
	bytes senderAddress = 7;
	bytes receiverAddress = 8;
}

message WooracleUpdated {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes newWooracle = 5;
	bytes contractAddress = 6;
	bytes senderAddress = 7;
	bytes receiverAddress = 8;
}

message Deposit {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes token = 5;
	bytes sender = 6;
	bytes amount = 7; // uint256
	bytes contractAddress = 8;
	bytes senderAddress = 9;
	bytes receiverAddress = 10;
}

message OwnershipTransferred {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes previousOwner = 5;
	bytes newOwner = 6;
	bytes contractAddress = 7;
	bytes senderAddress = 8;
	bytes receiverAddress = 9;
}

message WooSwap {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes fromToken = 5;
	bytes toToken = 6;
	bytes fromAmount = 7; // uint256
	bytes toAmount = 8; // uint256
	bytes from = 9;
	bytes to = 10;
	bytes rebateTo = 11;
	bytes swapVol = 12; // uint256
	bytes swapFee = 13; // uint256
	bytes contractAddress = 14;
	bytes senderAddress = 15;
	bytes receiverAddress = 16;
}

message Migrate {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes token = 5;
	bytes receiver = 6;
	bytes amount = 7; // uint256
	bytes contractAddress = 8;
	bytes senderAddress = 9;
	bytes receiverAddress = 10;
}

message Withdraw {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes token = 5;
	bytes receiver = 6;
	bytes amount = 7; // uint256
	bytes contractAddress = 8;
	bytes senderAddress = 9;
	bytes receiverAddress = 10;
}
